# Monopoly

./: pyproject.toml
src/monopoly/domain/: __main__.py  constants.py
src/monopoly/domain/entities/: estate.py  estate_state.py  game.py  player.py
src/monopoly/domain/entities/game/: bonus_manager.py  estate_manager.py  game.py  player_manager.py  rent_manager.py  tax_manager.py  time_manager.py
src/monopoly/domain/exceptions/: base.py  estate_exc.py
src/monopoly/domain/value_objects/: funds.py
src/monopoly/subdomain/: auth.py
tests/: conftest.py
tests/domain/player/: conftest.py  test_advance_turn.py  test_buy_estate.py  test_buyback.py  test_mortgage.py  test_trade_estates.py
